# AgentDrive

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  TODO.txt  pyproject.toml
.github/workflows/: deploy.yml  publish.yml  test.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_chunk_aliases.py  003_api_keys.py  004_file_batches_and_summaries.py  005_add_batch_id_to_chunks.py  006_drop_collections.py  007_knowledge_base_tables.py  19f589d55e82_add_updated_at_to_all_timestamped_tables.py
cloud-run/: service.yaml
docs/superpowers/plans/: 2026-03-22-api-key-management.md  2026-03-22-chunking-engine.md  2026-03-22-core-infrastructure.md  2026-03-22-retrieval-mcp.md  2026-03-22-retrieval-quality.md  (+13 more)
scripts/: install.sh
src/agentdrive/: __init__.py  config.py  dependencies.py  main.py
tests/: conftest.py  test_api_keys.py  test_auth.py  test_auth_endpoints.py  test_batch_docai.py  test_batch_embedding.py  test_batch_id.py  test_collections.py  test_config.py  test_credentials.py  test_file_type.py  test_files.py  test_gcs_output.py  test_incremental_ingest.py  test_ingest.py  test_install_route.py  test_integration.py  test_integration_batch_docai.py  test_integration_incremental.py  test_mcp_upload.py  test_models_api_key.py  test_models_batch.py  test_multi_batch_ingest.py  test_pdf_chunker.py  test_prefix_auth.py  test_queue.py  test_real_pdf_pipeline.py  test_schema_progress.py  test_search_api.py  test_signed_upload_endpoints.py  test_signed_url.py  test_storage.py  test_streaming_download.py  test_summarization.py  test_two_pass_enrichment.py  test_upload_reaper.py  test_uploading_status.py
tests/chunking/: test_code.py  test_context.py  test_hierarchy.py  test_markdown.py  test_notebook.py  test_pdf.py  test_registry.py  test_spreadsheet.py  test_structured.py  test_text.py  test_tokens.py
tests/e2e/: conftest.py  test_pdf_pipeline.py
tests/embedding/: test_client.py  test_pipeline.py
tests/enrichment/: test_client.py  test_contextual.py  test_table_questions.py
tests/fixtures/: sample.md  sample.py
tests/knowledge/: test_compilation.py  test_health.py  test_models.py  test_router.py  test_search.py  test_service.py  test_smoke.py
tests/mcp/: test_server.py
tests/search/: test_bm25.py  test_engine.py  test_fusion.py  test_rerank.py
(+81 files in other folders)
