[project]
name = "agentdrive"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.0",
    "google-cloud-storage>=2.18.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.17",
    "bcrypt>=4.2.0",
    "httpx>=0.28.0",
    "tiktoken>=0.8.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "pyyaml>=6.0",
    "docling>=2.15.0",
    "voyageai>=0.3.0",
    "cohere>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "testcontainers[postgres]>=4.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentdrive"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
